# tensorqtl

./: .gitignore  Dockerfile  LICENSE  README.md  Singularity  pyproject.toml  setup.py
docs/: outputs.md
example/: GTEx_v8_example.ipynb  InteractionQTL.ipynb  tensorqtl_examples.ipynb
example/data/: GEUVADIS.445_samples.GRCh38.20170504.maf01.filtered.nodup.chr18.psam  GEUVADIS.445_samples.covariates.txt
examples/: mixQTL_inputs_GTEx.ipynb  tensorqtl_examples.ipynb
install/: INSTALL.md  install_cuda.sh  requirements.txt  tensorqtl_env.yml
tensorqtl/: __init__.py  __main__.py  cis.py  coloc.py  core.py  eigenmt.py  genotypeio.py  lmm.py  mixqtl.py  pgen.py  post.py  rfunc.py  statsfunc.py  susie.py  tensorqtl.py  trans.py
utils/: vcf2hap.py
